--- a/css/css.css
+++ b/css/css.css
@@ -147,7 +147,7 @@ h1 {
     align-self: center;
 }
 .boite {
-	background: rgb(255,255,255,0.4);
+	background-color: rgba(255,255,255,0.4);
 	padding:20px;
 }
 
