--- a/css/css.css
+++ b/css/css.css
@@ -7,7 +7,7 @@ html {
 }
 
 .bg-trans {
-	background: rgb(255,255,255,0.4);
+	background-color: rgba(255,255,255,0.4);
 }
 
 #conteneur {
@@ -125,7 +125,6 @@ main {
 	margin:auto;
 	height:80px;
 	float:left;
-
 }
 h1 {
 	display:inline;
@@ -137,6 +136,7 @@ h1 {
 	color:white;
 }
 .page-content {
+	
   display: grid;
   padding:30px;
   grid-template-columns: 1fr 1fr;
