--- a/css/css_stock.css
+++ b/css/css_stock.css
@@ -1,15 +1,13 @@
-p {
+
+.p_stock {
     color: #4f3827;   
     font-family:monospace;
     font-size: 2em;
 }
 
-
-
-
 .progress-bar { 
     width: 440px;
-    height: 2px;
+    height: 7px;
     padding: 2px;
     background-color: #191919;
     border-radius: 16px;
@@ -20,12 +18,13 @@ p {
     -moz-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
 }
 
+
 .progress-bar:before { 
     content: '';
     display: block;
     position: absolute;
-    width: 440px;
-    height: 2px;
+    width: 400px;
+    height: 7px;
     background: #999;
     border-radius: 12px;
     -webkit-border-radius: 12px;
@@ -35,13 +34,12 @@ p {
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
 }
 
-
 .progress-bar:after { 
     content: '|||||||||||||';
     display: block;
     position: absolute;
-    width: 440px;
-    height: 2px;
+    width: 200px;
+    height: 7px;
     overflow: hidden;
     border-radius: 12px;
     -webkit-border-radius: 12px;
@@ -56,16 +54,11 @@ p {
     opacity: 0.1;
 }
 
-
-
 .green:before { 
-  background: #1ad81d;
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1ad81d), to(#375b37));
-  background: -moz-linear-gradient(top, #1ad81d, #375b37);
+  background: ##1cb70b;
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1cb70b), to(#006A6B));
+  background: -moz-linear-gradient(top, ##1cb70b, #006A6B);
 }
-
-
-
 
 .box{
     align-items: center;
@@ -83,6 +76,9 @@ button{
     font-size: 1em;
     background-color: #1cb70b; 
     color:#fff;
+    outline: none;
+    cursor: pointer;
+    transition:0.4s;
 }
 
 button:hover{
@@ -93,4 +89,16 @@ button:hover{
     font-size: 1em;
     background-color: #fff; 
     color:#1cb70b;
+    transform: scale(1.15);
+
+}
+
+
+button:active {
+    transform: scale(0.99);
+}
+
+.cafe{
+    width: 50px;
+    margin-left:200px;
 }
