--- a/css/css_referent-machine.css
+++ b/css/css_referent-machine.css
@@ -1,4 +1,4 @@
-p {
+p.p {
     color: black;   
     font-family:monospace;
     font-size: 50px;
@@ -35,7 +35,7 @@ input:hover{
     background-color: white ; 
     color:#45a049;
 }
-.boite{
+div.boite1{
     background-position: center;
     background-image: url(./img/MachineUne.jpg);
     background-size: cover;
@@ -47,7 +47,7 @@ input:hover{
 }
 
 
-.boite2{
+div.boite2{
     padding: 20px;
     background-position: center;
     background-image: url(./img/MachineDeux.jpg);
@@ -57,7 +57,7 @@ input:hover{
     border-width: 1px;
     border-color: #5C5C5C;
 }
-.boite3{
+div.boite3{
     padding: 20px;
     background-position:center;
     background-image: url(./img/MachineTrois.jpg);
@@ -67,7 +67,7 @@ input:hover{
     border-width: 1px;
     border-color: #5C5C5C;
 }
-.boite4{
+div.boite4{
     padding: 20px;
     background-position:center;
     background-image: url(./img/MachineQuatre.jpg);
@@ -77,7 +77,7 @@ input:hover{
     border-width: 1px;
     border-color: #5C5C5C;
 }
-.boite5{
+div.boite5{
     padding: 20px;
     background-position:center;
     background-image: url(./img/MachineCinq.jpg);
