--- a/css/css_admin.css
+++ b/css/css_admin.css
@@ -1,17 +1,22 @@
-div.boite{
+.boite{
 	height: 300px;
 	width: 860px;
 }
-h3{
-	position :fixed;
-	top:350px;
-	left:450px;
-}
-h4{
-	position :fixed;
-	top:350px;
-	left:900px;
-}
+
+.h3{
+    position: relative;
+    top: 70px;
+	padding:20px;
+
+ }
+
+.h4{
+    position: relative;
+    padding:20px;
+    left:520px;
+    bottom: 72px;
+ }
+
 
 input{
 	background-color: #45a049;
