--- a/css/css_referent-profil.css
+++ b/css/css_referent-profil.css
@@ -99,5 +99,14 @@ td#td1{
     height : 50px;
 
 }
+input[type="email"],input[type="text"],input[type="time"],select{
+	width: 100%;
+    margin: 5px;
+    padding: 5px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 25px;
+}
 
 
