--- a/css/css_accueil.css
+++ b/css/css_accueil.css
@@ -1,8 +1,8 @@
 
 .boitePrincipale {
 	background-color: rgba(255,255,255,0.4);
-	padding:0px;
-	width : 840px;
+	/* padding:auto; */
+	width : inherit;
 	float:left;
 }
 .icon-maison{
@@ -13,7 +13,7 @@
 	background-color: rgba(255,255,255,0.4);
 	padding:1px;
 	margin: 15px;
-	width: 380px;
+	width: 100%;
 	float:left;
 }
 
