--- a/css/css_connexion.css
+++ b/css/css_connexion.css
@@ -159,3 +159,45 @@ footer {
     color: white;
 }
 
+form {
+    width: 100%;
+}
+
+label {
+    display: inline-block;
+    width: 40%;
+}
+
+input[type=text],
+input[type=password],
+input[type=email],
+select,
+textarea {
+    width: 50%;
+    margin: 5px;
+    padding: 5px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 25px;
+    margin: 14px;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 20px;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.alert {
+    margin: 20px;
+}
+
