--- a/css/css_stock.css
+++ b/css/css_stock.css
@@ -102,7 +102,6 @@ button:active {
 .cafe{
     width: 50px;
     margin-left:202px;
-
 }
 
 .boite1{
@@ -150,6 +149,104 @@ button:active {
 }
 
 
-table{
-    border: none;
+.boite4{
+    padding: 20px;
+    background-image: url(./img/backcafe.jpg);
+    background-size: cover;
+    border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5C5C5C;
+}
+
+
+
+
+.machinesCafe{
+    display: table;
+    width: 500px;
+    margin: 100px auto;
+    padding: 0;
+    background: linear-gradient(deepskyblue, dodgerblue);
+    background: dodgerblue;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .3),
+                0 3px 5px rgba(0, 0, 0, .2),
+                0 5px 10px rgba(0, 0, 0, .2),
+                0 20px 20px rgba(0, 0, 0, .15);
+}
+
+.cafetiere{
+    display: table-cell;
+   
+}
+
+ul.machinesCafe li.cafetiere a{
+    display: block;
+    text-align: center;
+    color: rgba(0, 0, 0, .7); 
+    text-decoration: none;
+    padding: 8px 8px 17px 8px;  
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .4);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .7) inset, 
+                0 -1px 0 hsl(210, 100%, 32%) inset, 
+                0 -2px 0 hsl(210, 100%, 38%) inset, 
+                0 -3px 0 hsl(210, 100%, 44%) inset, 
+                0 -4px 0 hsl(210, 100%, 50%) inset, 
+                0 -5px 0 hsl(210, 100%, 60%) inset;
+    transition: padding .3s, background .3s;
+    position: relative;
+}
+
+ul.machinesCafe li.cafetiere:first-child a{
+    border-radius: 3px 0 0 3px;
+}
+ul.machinesCafe li.cafetiere:last-child a{
+    border-radius: 0 3px 3px 0;
+}
+
+
+ul.machinesCafe li.cafetiere a:hover, 
+ul.machinesCafe li.cafetiere a:focus{
+    background: rgba(255,255,255,.2);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .7) inset, 
+                0 -1px 0 hsl(210, 100%, 42%) inset, 
+                0 -2px 0 hsl(210, 100%, 48%) inset, 
+                0 -3px 0 hsl(210, 100%, 54%) inset, 
+                0 -4px 0 hsl(210, 100%, 60%) inset, 
+                0 -5px 0 hsl(210, 100%, 70%) inset; 
+    padding: 8px 25px 17px 25px;
+    transition: all .3s 0s;
+} 
+
+ul.machinesCafe li.cafetiere a:active{
+    background: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.1)); 
+    box-shadow: 0 0 2px rgba(0,0,0,.3) inset;
+}
+
+
+ul.machinesCafe li.cafetiere a::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 9px;
+    margin-left: -2px;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, .5);
+}
+
+
+ul.machinesCafe li.cafetiere a:hover::before,
+ul.machinesCafe li.cafetiere a:focus::before{
+    background: white;
+    box-shadow: 0 0 2px white, 
+                0 -1px 0 rgba(0, 0, 0, .4);
+}
+
+
+.formulaire {
+    width:200px;
+    display: flex;
 }
