--- a/css/css_accueil.css
+++ b/css/css_accueil.css
@@ -1,9 +1,3 @@
-.page-content2 {
-	
-	display: grid;
-	padding:30px;
-  }
-
 .boitePrincipale {
 	background-color: rgba(255,255,255,0.4);
 	
@@ -16,8 +10,9 @@
 .boite {
 	background-color: rgba(255,255,255,0.4);
 	padding:1px;
-	margin: 5%;
+	margin: 5%; 
 	float:left;
+	flex:1;
 }
 
 #accueil-header {
@@ -40,13 +35,15 @@
 
 .Recap{
 	padding-left:5%;
+	padding-right:5%;
+	padding-bottom: 5%;
 	
 }
 .InfoRecap {
 	padding-right:200px;
 }
 
-
+/*Bouton commander un café*/
 button{
 	font-size:10px;
 	color:white;
@@ -54,28 +51,80 @@ button{
 	border: 2px;
 	border-radius: 15px;
 	padding: 1%;
-	margin-top: 1%;
 	transition-duration: 0.4s;
 	height: 40px;
+	margin:5%;
 	
 }
-
 button:hover {
-	
-	/* border-radius: 15px; */
-    /*padding: 5px;*/
-    /* font-family:monospace ; */
     background-color: white ; 
     color:#45a049;
-
 }
+
 tr{
 	text-align: left;
 }
-th{
-	margin-left:10%;
-	margin-right:10%;
-}
 td{
-	padding-left:5%;
+
+	text-align: center;
+}
+
+/* Switch button */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 36px;
+	height: 25px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+} 
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: red;
+  /* -webkit-transition: .4s;
+  transition: .4s; */
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 2px; 
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: green;
+} 
+
+input:focus + .slider {
+  box-shadow: 0 0 0px green;
+} 
+
+ input:checked + .slider:before {
+  -webkit-transform: translateX(10px);
+  -ms-transform: translateX(10px);
+  transform: translateX(10px);
+} 
+
+.slider.round {
+  border-radius: 34px;
+} 
+
+.slider.round:before {
+  border-radius: 50%;
 }
