--- a/css/css_stock.css
+++ b/css/css_stock.css
@@ -7,7 +7,7 @@
 }
 
 .progress-bar { 
-    width: 440px;
+    width: 100%;
     height: 7px;
     padding: 2px;
     background-color: #191919;
@@ -24,7 +24,7 @@
     content: '';
     display: block;
     position: absolute;
-    width: 400px;
+    width: 8%;
     height: 7px;
     background: #999;
     border-radius: 12px;
@@ -39,7 +39,7 @@
     content: '|||||||||||||';
     display: block;
     position: absolute;
-    width: 400px;
+    width: 8%;
     height: 7px;
     overflow: hidden;
     border-radius: 12px;
@@ -101,71 +101,71 @@ button:active {
 
 .cafe{
     width: 50px;
-    margin-left:202px;
+    margin-left:44%;
 }
 
 .boite1{
-    padding: 20px;
+    padding: 2%;
     background-image: url(./img/backcaffe.jpg);
     background-size: cover;
     border-radius: 7px;
     border-style: solid;
     border-width: 1px;
     border-color: #5C5C5C;
+    width: 45%;
+    float:left;
+    margin-right: 1%;
+    margin-bottom: 1%;
 }
 
 
 .boite2{
-    padding: 20px;
+    padding: 2%;
     background-image: url(./img/backchoc.jpg);
     background-size: cover;
     border-radius: 7px;
     border-style: solid;
     border-width: 1px;
     border-color: #5C5C5C;
+    width: 45%;
+    float:left;
 }
 
 
 
 .boite3{
-    padding: 20px;
+    padding: 2%;
     background-image: url(./img/backlatte.jpg);
     background-size: cover;
     border-radius: 7px;
     border-style: solid;
     border-width: 1px;
     border-color: #5C5C5C;
+    width: 45%;
+    float:left;
+    margin-right: 1%;
+    margin-bottom: 1%;
 }
 
 
 .boite4{
-    padding: 20px;
+    padding: 2%;
     background-image: url(./img/backcafe.jpg);
     background-size: cover;
     border-radius: 7px;
     border-style: solid;
     border-width: 1px;
     border-color: #5C5C5C;
+    width: 45%;
+    float:left;
 }
-
-
-.boite4{
-    padding: 20px;
-    background-image: url(./img/backcafe.jpg);
-    background-size: cover;
-    border-radius: 7px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #5C5C5C;
-}
-
-
 
 
 .machinesCafe{
+    justify-content:center;
     display: table;
-    width: 500px;
-    margin: 100px auto;
+    width: 100%;
+    margin: 2% auto 80px;
     padding: 0;
     background: linear-gradient(deepskyblue, dodgerblue);
     background: dodgerblue;
@@ -247,6 +247,13 @@ ul.machinesCafe li.cafetiere a:focus::before{
 
 
 .formulaire {
-    width:200px;
     display: flex;
+    justify-content:center;
+}
+
+.boiteprincipale{
+    display: flex;
+    justify-content: center;
+    float:left;
+    background-color: rgba(255,255,255);
 }
