--- a/css/css_referent.css
+++ b/css/css_referent.css
@@ -1,21 +1,25 @@
 .boite{
-	height: 300px;
-	width: 860px;
+	margin:1%;
+	display: flex;
+	justify-content: center;
 }
 
 .h3{
-    position: relative;
+	margin: 2%;
+	flex:1;
+    /* position: relative;
     top: 70px;
-	padding:20px;
+	padding:20px; */
 
  }
 
 .h4{
-    position: relative;
+	margin: 2%;
+    /* position: relative;
     padding:20px;
-    left:520px;
-    bottom: 72px;
- }
+    left:500px;
+    bottom: 72px; */
+ } 
 
 
 input{
