[referent-maison + accueil]
Liaison bdd machines et capteur

--- a/css/css_referent-autre-page.css
+++ b/css/css_referent-autre-page.css
@@ -9,12 +9,14 @@ div.box{
     display: flex;
     justify-content: center;
 }
-
-input{
-     background-color: #45a049;
+.center{
+    display:flex;
+    justify-content: center;
+}
+.button{
+    background-color: #45a049;
     border: none;
     color: white;
-    /*padding: 15px 32px;*/
     height: 20px;
     width: 120px;
     text-align: center;
@@ -22,20 +24,16 @@ input{
     display: inline-block;
     font-size: 16px;
     border-radius:4px;
-    /*margin-left:0em;*/
     cursor:pointer;
     font-family: monospace;
-
 }
 
-input:hover{
+.button:hover{
     border: none;
     border-radius: 4px;
-    /*padding: 5px;*/
     font-family:monospace ;
     background-color: white ; 
     color:#45a049;
-
 }
 
 
