--- a/css/css_accueil.css
+++ b/css/css_accueil.css
@@ -27,10 +27,10 @@
 .cafetiere-header{
 	background-color:rgba(255,255,255,0.4);
 	height:20px;
-	padding-top:1px;
-	padding-bottom:20px;
 	text-align: center;
 	font-size:15px;
+	padding-bottom: 1%;
+	padding-top:1%;
 }
 
 .Recap{
