--- a/css/css_referent-autre-page.css
+++ b/css/css_referent-autre-page.css
@@ -13,6 +13,14 @@ div.box{
     display:flex;
     justify-content: center;
 }
+.afficherTitre{
+    display:flex;
+    justify-content: center;
+    color: black;   
+    font-family:monospace;
+    font-size: 40px;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
 .button{
     background-color: #45a049;
     border: none;
@@ -49,4 +57,11 @@ div.boite{
     border-style: solid;
     border-width: 1px;
     border-color: #5C5C5C;
+}
+
+div#editer{
+	height: 610px;
+	width: 420px;
+	background: rgba(255,255,255,0.4);
+	visibility: initial;
 }
