--- a/css/css_admin.css
+++ b/css/css_admin.css
@@ -48,3 +48,59 @@ div.box{
 	font-size:2em;
 
 }
+
+
+
+.datagrid table { border-collapse: collapse; text-align: left; width: 100%; } 
+.datagrid {font: normal 12px/150% Arial, Helvetica, sans-serif; background: #fff; overflow: hidden; border: 1px solid #A65B1A; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+.datagrid table td, 
+.datagrid table th { padding: 3px 10px; }
+.datagrid table thead th {background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #A65B1A), color-stop(1, #7F4614) );background:-moz-linear-gradient( center top, #A65B1A 5%, #7F4614 100% );filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#A65B1A', endColorstr='#7F4614');background-color:#A65B1A; color:#FFFFFF; font-size: 15px; font-weight: bold; border-left: 1px solid #BF691E; } 
+.datagrid table thead th:first-child { border: none; }
+.datagrid table tbody td { color: #7F4614; border-left: 1px solid #D9CFB8;font-size: 12px;font-weight: normal; }
+.datagrid table tbody 
+.alt td { background: #F0E5CC; color: #7F4614; }
+.datagrid table tbody td:first-child { border-left: none; }
+.datagrid table tbody tr:last-child td { border-bottom: none; }
+
+
+
+
+input[type=text], input[type=email],input[type=time],select, textarea{
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 25px;
+}
+label{
+    width: 100%;
+    margin: 5px;
+    padding: 5px;
+    display: inline-block;
+    height: 25px;
+
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 5px;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+#boitePrincipale {
+	background-color: rgba(255,255,255,0.4);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;  
+  } 
