--- a/css/css_referent-profil.css
+++ b/css/css_referent-profil.css
@@ -1,43 +1,58 @@
+.page-content{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 
+}
+
+.LigneUser{
+	background-color: rgba(255,255,255,0.4);
+	padding:2%;
+	margin-bottom : 2%;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5C5C5C;
+}
+
+.boite2{
+	font-size : 20px;
+	display: flex;
+	align-items: center;
+}
+
+form{
+	background-color: rgba(255,255,255,0.4);
+}
 div#editer{
-	height: 610px;
-	width: 420px;
 	background: rgba(255,255,255,0.4);
 	visibility: initial;
 }
-p.p{
-	font-size:x-large;
-	float:left;
-	margin-left:auto;
-	margin right: auto;
-	width: 5.5em;
-	font-family: Myriad pro;
-	text-align: center;	
-}
-td#td{
-    width : 100px;
-    height : 50px;
-    /*border :1px solid rgba(255,255,255,0.4);*/
-}
-tr#tr{
-	background:rgba(255,255,255,0.4);
-	border:10px solid rgba(255,255,255,0.4);	
-}
+
+
 input#edite{
 	background-color: #45a049;
  	border: none;
- 	color: white;
+	color: white;
  	/*padding: 15px 32px;*/
- 	height: 50px;
+ 	height: 30px;
  	width: 70px;
  	text-align: center;
  	text-decoration: none;
  	display: inline-block;
  	font-size: 16px;
  	border-radius:4px;
- 	margin-left:3em;
  	cursor:pointer;
- 	font-family: Myriad Pro;
+	font-family: Myriad Pro;
+	 
+	border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5C5C5C;
 }
 input#edite:hover{
     border: none;
@@ -78,38 +93,51 @@ input#valider:hover{
     
 }
 
+.droite{
+	margin-left:2%;
+}
 
-h2{
+.title{
+	display: block;
+    font-size: 1.5em;
+    /* margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px; */
+	font-weight: bold;
 	font-family: Myriad Pro;
 	position : relative;
 	font-size:xx-large;
-	left:32px;
+	background-color: rgba(255,255,255,0.4);
+	text-align: center;
 }
-tr#tr1{
-	font-size:x-large;
-	
-	
-	
-	font-family: Myriad pro;
-		
 
-}
-td#td1{
-	width : 100px;
-    height : 50px;
 
-}
-input[type="email"],input[type="text"],input[type="time"],select{
-	width: 100%;
-    margin: 5px;
-    padding: 5px;
+input[type="email"],input[type=password],input[type="text"],input[type="time"],select{
+	width: 95%;
+    margin: 1%;
+    padding: 1%;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
-    height: 25px;
+}
+ 
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 5px;
 }
 
-
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+label{
+	padding : 2%;
+}
 
 
 input#add{
