--- a/css/css_admin.css
+++ b/css/css_admin.css
@@ -66,7 +66,7 @@ div.box{
 
 
 
-input[type=text], input[type=email],input[type=time],select, textarea{
+input[type=text], input[type=password],input[type=email],input[type=time],select, textarea{
     width: 100%;
     margin: 5px;
     padding: 5px;
