--- a/css/css_referent-profil.css
+++ b/css/css_referent-profil.css
@@ -140,13 +140,13 @@ label{
 }
 
 
-input#add{
+input#addUser{
 	background-color: #45a049;
  	border: none;
  	color: white;
  	/*padding: 15px 32px;*/
  	height: 50px;
- 	width: 50%;
+ 	width: 100%;
  	text-align: center;
  	text-decoration: none;
  	display: inline-block;
@@ -155,9 +155,14 @@ input#add{
  	cursor:pointer;
  	font-family: Myriad Pro;
  	margin-top: 1%;
- 	margin-bottom: 1%;
+	margin-bottom: 1%;
+	 
+	border-radius: 7px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #5C5C5C;
 }
-input#add:hover{
+input#addUser:hover{
     border: none;
     border-radius: 4px;
     padding: 5px;
@@ -165,5 +170,6 @@ input#add:hover{
     background-color: white ; 
     color:#45a049;
     margin-top: 1%;
-    margin-bottom: 1%;
+	margin-bottom: 1%;
+	
 }
