--- a/css/css_referent-profil.css
+++ b/css/css_referent-profil.css
@@ -173,3 +173,26 @@ input#addUser:hover{
 	margin-bottom: 1%;
 	
 }
+
+
+.delete_btn {
+    text-decoration: none;
+    font-size:13px;
+	color:white;
+	background-color: red;
+	border: 2px;
+	border-radius: 4px;
+	margin: 10px;
+    padding: 5px;
+	text-align: center;  
+	
+	border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #5C5C5C;
+    
+}
+
+.delete_btn:hover {
+    background-color: rgb(235,38,41);
+}
